WebCore/html/HTML5Token.h
@@ -50,7 +50,7 @@ public:
         WTF::Vector<UChar, 32> m_value;
     };
 
-    typedef WTF::Vector<Attribute> AttributeList;
+    typedef WTF::Vector<Attribute, 10> AttributeList;
     typedef WTF::Vector<UChar, 1024> DataVector;
 
     HTML5Token() { clear(); }
@@ -64,7 +64,7 @@ public:
     {
         ASSERT(m_type == Uninitialized);
         m_type = StartTag;
-        clearData();
+        m_data.clear();
         m_selfClosing = false;
         m_currentAttribute = 0;
         m_attributes.clear();
@@ -77,7 +77,7 @@ public:
     {
         ASSERT(m_type == Uninitialized);
         m_type = EndTag;
-        clearData();
+        m_data.clear();
         m_selfClosing = false;
         m_currentAttribute = 0;
         m_attributes.clear();
@@ -89,7 +89,7 @@ public:
     {
         ASSERT(m_type == Uninitialized);
         m_type = Character;
-        clearData();
+        m_data.clear();
         m_data.append(character);
     }
 
@@ -97,14 +97,14 @@ public:
     {
         ASSERT(m_type == Uninitialized);
         m_type = Comment;
-        clearData();
+        m_data.clear();
     }
 
     void beginDOCTYPE()
     {
         ASSERT(m_type == Uninitialized);
         m_type = DOCTYPE;
-        clearData();
+        m_data.clear();
         m_doctypeData.set(new DoctypeData());
     }
 
@@ -166,46 +166,22 @@ public:
         return m_attributes;
     }
 
-    AtomicString name()
+    const DataVector& name()
     {
         ASSERT(m_type == StartTag || m_type == EndTag || m_type == DOCTYPE);
-        if (!m_data.isEmpty() && m_dataAsNameAtom.isEmpty())
-            m_dataAsNameAtom = AtomicString(adoptDataAsStringImpl());
-        return m_dataAsNameAtom;
-    }
-
-    PassRefPtr<StringImpl> adoptDataAsStringImpl()
-    {
-        ASSERT(!m_dataAsNameAtom); // An attempt to make sure this isn't called twice.
-        return StringImpl::adopt(m_data);
+        return m_data;
     }
 
     const DataVector& characters()
     {
         ASSERT(m_type == Character);
-        ASSERT(!m_dataAsNameAtom);
         return m_data;
     }
 
     const DataVector& comment()
     {
         ASSERT(m_type == Comment);
-        ASSERT(!m_dataAsNameAtom);
         return m_data;
-    }
-
-    // FIXME: Should be removed once we stop using the old parser.
-    String takeCharacters()
-    {
-        ASSERT(m_type == Character);
-        return String(adoptDataAsStringImpl());
-    }
-
-    // FIXME: Should be removed once we stop using the old parser.
-    String takeComment()
-    {
-        ASSERT(m_type == Comment);
-        return String(adoptDataAsStringImpl());
     }
 
     // FIXME: Distinguish between a missing public identifer and an empty one.
@@ -267,19 +243,12 @@ private:
         WTF::Vector<UChar> m_systemIdentifier;
     };
 
-    void clearData()
-    {
-        m_data.clear();
-        m_dataAsNameAtom = AtomicString();
-    }
-
     Type m_type;
 
     // "name" for DOCTYPE, StartTag, and EndTag
     // "characters" for Character
     // "data" for Comment
     DataVector m_data;
-    AtomicString m_dataAsNameAtom;
 
     // For DOCTYPE
     OwnPtr<DoctypeData> m_doctypeData;
